--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://use.typekit.net/rfk1lkz.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link rel="stylesheet" href="https://use.typekit.net/rfk1lkz.css" />
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        html, body, #root {
-            height: 100%;
-        }
-        body {
-            font-family: 'Helvetica', sans-serif;
-        }
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      html,
+      body,
+      #root {
+        height: 100%;
+      }
+      body {
+        font-family: "Helvetica", sans-serif;
+      }
     </style>
     <title>Cartolicious - A Cartographic Art Tool</title>
-</head>
+  </head>
 
-<body>
-    <div id="root">
-    </div>
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
