Added google analytics, update to https

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -30,4 +30,13 @@
   <body>
     <div id="root"></div>
   </body>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9T3W4M5F8H"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9T3W4M5F8H');
+  </script>
 </html>
